jobs/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: stalker-jobs
  labels:
    name: stalker-jobs
