jobs/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jobs
  namespace: stalker-jobs
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stalker
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: orchestrator
      ports:
        - protocol: TCP
          port: 80
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 10.0.0.0/8
        - ipBlock:
            cidr: ::/0
            except:
              - fc00::/7
              - fe80::/10

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
